--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
   <head>
   <html lang="en">
   <meta charset="utf-8">
-  <title>Frontend</title>
+  <title>Test-angular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
